--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ futures = "0.3.5"
 # And we need to keep Cargo.lock in track, so CI can choose a correct version.
 #
 # See https://doc.rust-lang.org/cargo/reference/resolver.html#semver-compatibility
-grpcio = { version = "0.*", default-features = false }
+grpcio = { version = "0.11.0", default-features = false }
 [build-dependencies]
 protobuf-build = { version = "0.*", default-features = false }
 
